Venda arrumada, começo do menu e telas de cadastro

--- a/src/main/webapp/WEB-INF/template/footerPagina.xhtml
+++ b/src/main/webapp/WEB-INF/template/footerPagina.xhtml
@@ -8,9 +8,10 @@
 
 <body>
 	<ui:composition>
-
-		<h1>Footer padrão</h1>
-
+		<div align="center">
+			<h1>A minha vontade é forte, porém minha disposição de obedecer-lhe é fraca.</h1>
+			<h6>Carlos Drummond de Andrade</h6>
+		</div>
 	</ui:composition>
 </body>
 </html>
