--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -5,6 +5,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
+
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<h:outputStylesheet library="css" name="face.css" />
@@ -12,38 +13,49 @@
 		library="primefaces" />
 	<title>Site de jogos</title>
 </h:head>
+
 <body>
 	<ui:composition>
-
-		<h2 align="center">Seus jogos aqui</h2>
-		<div align="center">
-			<h:graphicImage library="imagem" alt="Logo da empresa"
-				name="Wano.jpg" height="100px" width="400px" />
+		<div id="header" style="padding: 200px, 10px">
+			<h2 align="center">Seus jogos aqui</h2>
+			<h:form>
+			<p:growl id="messages"/>
+ 
+    <p:menubar>
+        <p:submenu label="Adicionar" icon="pi pi-file">
+            <p:menuitem value="Categoria" url="cadastroCategoria.xhtml?faces-redirect=true" />
+            <p:separator />
+             <p:menuitem value="Marca" url="cadastroMarca.xhtml?faces-redirect=true" />
+            <p:separator />
+             <p:menuitem value="Plataforma" url="cadastroPlataforma.xhtml?faces-redirect=true" />
+            <p:separator />
+             <p:menuitem value="Produto" url="cadastroProduto.xhtml?faces-redirect=true" />
+            <p:separator />
+        </p:submenu>
+ 
+        <p:submenu label="Edit" icon="pi pi-pencil">
+            <p:menuitem value="Undo" url="#" icon="pi pi-angle-double-left" />
+            <p:menuitem value="Redo" url="#" icon="pi pi-angle-double-right" />
+        </p:submenu>
+ 
+        <p:submenu label="Help" icon="pi pi-question">
+            <p:menuitem value="Contents" url="#" />
+            <p:submenu label="Search" icon="pi pi-search">
+                <p:submenu label="Text">
+                    <p:menuitem value="Workspace" url="#" />
+                </p:submenu>
+                <p:menuitem value="File" url="#" />
+            </p:submenu>
+        </p:submenu> 
+        <p:menuitem value="Quit" url="http://www.primefaces.org" icon="pi pi-times" />
+ 
+        <f:facet name="options">
+            <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Search"/>
+            <p:commandButton type="button" value="Logout" icon="pi pi-home" />
+        </f:facet>
+    </p:menubar>
+			</h:form>
 		</div>
-		<h:form>
-			<div align="center">
-				<p:panelGrid columns="3" layout="grid"
-					styleClass="showcase-text-align-center"
-					columnClasses="ui-grid-col-4,ui-grid-col-4,ui-grid-col-4">
-					<p:column>
-						<p:commandButton value="Exemplos"
-							action="exemploTrabalhoWeb.xhtml?faces-redirect=true"
-							update="messages" />
-					</p:column>
-
-					<p:column>
-						<p:commandButton value="Cadastrar"
-							action="produto.xhtml?faces-redirect=true" update="messages" />
-					</p:column>
-					<p:column>
-						<p:commandButton value="Consultar"
-							action="produtoConsulta.xhtml?faces-redirect=true"
-							update="messages" />
-					</p:column>
-				</p:panelGrid>
-				<p:growl id="messages" showDetail="true" />
-			</div>
-		</h:form>
 	</ui:composition>
 </body>
 </html>
