--- a/src/main/webapp/resources/css/face.css
+++ b/src/main/webapp/resources/css/face.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 
 #header{
-	padding: 200px, 10px
+	padding: 200px, 10px !important
 }
 
 
 h2 {
-	align: center;
+	align: center !important;
 	color: black;
 }
 .centro{
