Mudança de tema

--- a/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
+++ b/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
@@ -23,7 +23,7 @@
  
     <p:menubar>
         <p:submenu label="Adicionar" icon="pi pi-file">
-            <p:menuitem value="Categoria" url="cadastroCategoria.xhtml?faces-redirect=true" />
+            <p:menuitem rendered="" value="Categoria" url="cadastroCategoria.xhtml?faces-redirect=true" />
             <p:separator />
              <p:menuitem value="Marca" url="cadastroMarca.xhtml?faces-redirect=true" />
             <p:separator />
