--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -19,41 +19,46 @@
 		<div id="header" style="padding: 200px, 10px">
 			<h2 align="center">Seus jogos aqui</h2>
 			<h:form>
-			<p:growl id="messages"/>
- 
-    <p:menubar>
-        <p:submenu label="Adicionar" icon="pi pi-file">
-            <p:menuitem value="Categoria" url="cadastroCategoria.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="Marca" url="cadastroMarca.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="Plataforma" url="cadastroPlataforma.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="Produto" url="cadastroProduto.xhtml?faces-redirect=true" />
-            <p:separator />
-        </p:submenu>
- 
-        <p:submenu label="Edit" icon="pi pi-pencil">
-            <p:menuitem value="Undo" url="#" icon="pi pi-angle-double-left" />
-            <p:menuitem value="Redo" url="#" icon="pi pi-angle-double-right" />
-        </p:submenu>
- 
-        <p:submenu label="Help" icon="pi pi-question">
-            <p:menuitem value="Contents" url="#" />
-            <p:submenu label="Search" icon="pi pi-search">
-                <p:submenu label="Text">
-                    <p:menuitem value="Workspace" url="#" />
-                </p:submenu>
-                <p:menuitem value="File" url="#" />
-            </p:submenu>
-        </p:submenu> 
-        <p:menuitem value="Quit" url="http://www.primefaces.org" icon="pi pi-times" />
- 
-        <f:facet name="options">
-            <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Search"/>
-            <p:commandButton type="button" value="Logout" icon="pi pi-home" />
-        </f:facet>
-    </p:menubar>
+				<p:growl id="messages" />
+
+				<p:menubar>
+					<p:submenu label="Adicionar" icon="pi pi-file">
+						<p:menuitem value="Categoria"
+							url="cadastroCategoria.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="Marca"
+							url="cadastroMarca.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="Plataforma"
+							url="cadastroPlataforma.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="Produto"
+							url="cadastroProduto.xhtml?faces-redirect=true" />
+						<p:separator />
+					</p:submenu>
+
+					<p:submenu label="Edit" icon="pi pi-pencil">
+						<p:menuitem value="Undo" url="#" icon="pi pi-angle-double-left" />
+						<p:menuitem value="Redo" url="#" icon="pi pi-angle-double-right" />
+					</p:submenu>
+
+					<p:submenu label="Administrar" icon="pi pi-question">
+						<p:menuitem value="Administrador"
+							url="cadastroAdministrador.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="Vendedor"
+							url="cadastroVendedor.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="Cliente"
+							url="cadastroCliente.xhtml?faces-redirect=true" />
+						</p:submenu>
+						
+						<f:facet name="options">
+							<p:inputText style="margin:1px 10px 1px 1px;"
+								placeholder="Search" />
+							<p:commandButton type="button" value="Logout" icon="pi pi-home" />
+						</f:facet>
+				</p:menubar>
 			</h:form>
 		</div>
 	</ui:composition>
