--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -5,20 +5,22 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
 	<title><ui:insert name="tituloJanela" /></title>
-	<h:outputStylesheet library="css" name="estilos.css"/>
+	<h:outputStylesheet library="css" name="estilos.css" />
+	<h:outputStylesheet name="primeicons/primeicons.css"
+		library="primefaces" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </h:head>
 <h:body>
 	<div id="cabecalho">
-		<ui:include src="/WEB-INF/template/MenuAdministrador.xhtml" />
+			<ui:include src="/WEB-INF/template/MenuAdministrador.xhtml" />
 	</div>
 	<div id="conteudo">
 		<ui:insert name="conteudo">
-		
+
 		</ui:insert>
 	</div>
 	<div id="footer">
 		<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
-	</div>	
+	</div>
 </h:body>
 </html>
