ATUALIZAÇÃO DO MUNDO

--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -9,11 +9,12 @@
 	<h:outputStylesheet name="primeicons/primeicons.css"
 		library="primefaces" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="shortcut icon" type="image/x-icon" href="#{resource['imagem/cogu.png']}"/>
+	<link rel="shortcut icon" type="image/x-icon"
+		href="#{resource['imagem/cogu.png']}" />
 </h:head>
 <h:body>
 	<div id="cabecalho">
-		<ui:include src="/WEB-INF/template/MenuAdministrador.xhtml" />
+		<ui:include src="/WEB-INF/template/MenuAdministrador.xhtml"/>
 	</div>
 	<div id="conteudo">
 		<ui:insert name="conteudo">
