--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -11,7 +11,6 @@
 	<h:outputStylesheet library="css" name="face.css" />
 	<h:outputStylesheet name="primeicons/primeicons.css"
 		library="primefaces" />
-	<title>Site de jogos</title>
 </h:head>
 
 <body>
@@ -26,9 +25,9 @@
 					</f:facet>
 				</p:menubar>
 				<p:menubar>
-					<p:submenu label="Adicionar" icon="pi pi-file">
+					<p:submenu label="Gerência" icon="pi pi-file">
 						<p:menuitem value="Categoria"
-							url="cadastroCategoria.xhtml?faces-redirect=true" />
+								action="listaCategoria.xhtml"/>
 						<p:separator />
 						<p:menuitem value="Marca"
 							url="cadastroMarca.xhtml?faces-redirect=true" />
