--- a/src/main/webapp/WEB-INF/template/footerPagina.xhtml
+++ b/src/main/webapp/WEB-INF/template/footerPagina.xhtml
@@ -9,8 +9,8 @@
 <body>
 	<ui:composition>
 		<div align="center">
-			<h1>A minha vontade é forte, porém minha disposição de obedecer-lhe é fraca.</h1>
-			<h6>Carlos Drummond de Andrade</h6>
+			<h1>Pega pega.</h1>
+			<h6>Leonardo Pires</h6>
 		</div>
 	</ui:composition>
 </body>
