--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -20,14 +20,20 @@
 				<p:growl id="messages" />
 				<p:menubar>
 					<f:facet name="options">
-						<p:inputText style="margin:1px 10px 1px 1px;" placeholder="digite o nome do produto" />
-						<p:commandButton style="float:center" type="button" value="Pesquisar" icon="pi pi-search" />
+						<p:inputText style="margin:1px 10px 1px 1px;"
+							placeholder="digite o nome do produto" />
+						<p:commandButton style="float:center" type="button"
+							value="Pesquisar" icon="pi pi-search" />
 					</f:facet>
 				</p:menubar>
 				<p:menubar>
+					<p:submenu label="Perfil" icon="pi pi-pencil">
+						<p:menuitem value="Editar" url="#" />
+						<p:menuitem value="Redefinir senha" url="#" />
+					</p:submenu>
 					<p:submenu label="Gerência" icon="pi pi-file">
 						<p:menuitem value="Categoria"
-								action="listaCategoria.xhtml"/>
+							url="listaCategoria.xhtml?faces-redirect=true" />
 						<p:separator />
 						<p:menuitem value="Marca"
 							url="cadastroMarca.xhtml?faces-redirect=true" />
@@ -39,12 +45,6 @@
 							url="cadastroProduto.xhtml?faces-redirect=true" />
 						<p:separator />
 					</p:submenu>
-
-					<p:submenu label="Edit" icon="pi pi-pencil">
-						<p:menuitem value="Undo" url="#" icon="pi pi-angle-double-left" />
-						<p:menuitem value="Redo" url="#" icon="pi pi-angle-double-right" />
-					</p:submenu>
-
 					<p:submenu label="Administrar" icon="pi pi-user">
 						<p:menuitem value="Administrador"
 							url="cadastroAdministrador.xhtml?faces-redirect=true" />
