Nova tela de lista plataforma

--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -42,7 +42,7 @@
 							url="cadastroMarca.xhtml?faces-redirect=true" />
 						<p:separator />
 						<p:menuitem value="Plataforma"
-							url="cadastroPlataforma.xhtml?faces-redirect=true" />
+							url="listaPlataforma.xhtml?faces-redirect=true" />
 						<p:separator />
 						<p:menuitem value="Produto" action="#{produtoBean.crud()}" />
 						<p:separator />
