Atualizacao Menu com administrador, vendedor e cliente

--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -49,13 +49,13 @@
 					</p:submenu>
 					<p:submenu label="Administrar" icon="pi pi-users" >
 						<p:menuitem value="Administrador"
-							url="cadastroAdministrador.xhtml?faces-redirect=true" />
+							url="listaAdministrador.xhtml?faces-redirect=true" />
 						<p:separator />
 						<p:menuitem value="Vendedor"
-							url="cadastroVendedor.xhtml?faces-redirect=true" />
+							url="listaVendedor.xhtml?faces-redirect=true" />
 						<p:separator />
 						<p:menuitem value="Cliente"
-							url="cadastroCliente.xhtml?faces-redirect=true" />
+							url="listaCliente.xhtml?faces-redirect=true" />
 					</p:submenu>
 				</p:menubar>
 			</h:form>
