Filtros para a lista de categorias

--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -16,7 +16,7 @@
 <body>
 	<ui:composition>
 		<div id="header" style="padding: 200px, 10px">
-			<h:form>
+			<h:form enctype="multipart/form-data">
 				<p:growl id="messages" />
 				<p:menubar>
 					<f:facet name="options">
