--- a/src/main/webapp/WEB-INF/template/footerPagina.xhtml
+++ b/src/main/webapp/WEB-INF/template/footerPagina.xhtml
@@ -5,7 +5,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
-	
+
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<h:outputStylesheet library="css" name="footer.css" />
@@ -13,10 +13,11 @@
 
 
 <footer>
-<br></br>
 	<div class="blog-footer">
-		<p>Compre Seu Jogo | Endereço: Rua Juvenal Tererê, 50, Centro, Curitiba-PR, 83701-500 | Copyright 2018 © Compre Seu Jogo</p>
-		<p>Contato | Suporte: contato@compreseujogo.com.br </p>
+		<p>Compre Seu Jogo | Endereço: Rua Juvenal Tererê, 50, Centro,
+			Curitiba-PR, 83701-500</p>
+		<p>Copyright 2018 © Compre Seu Jogo</p>
+		<p>Contato | Suporte: contato@compreseujogo.com.br</p>
 	</div>
 
 </footer>
