--- a/src/main/webapp/resources/css/footer.css
+++ b/src/main/webapp/resources/css/footer.css
@@ -4,7 +4,7 @@
     padding: 1.5rem 0;
     color: black;
     text-align: center;
-    background-color: white;
+    background: gray;
     font-size: 20px;
     border-top: 0.3rem solid black;
    
