Adicionado a tela do carrinho

--- a/src/main/webapp/WEB-INF/template/MenuSite.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuSite.xhtml
@@ -40,7 +40,12 @@
             <p:menuitem value="JOGOS" url="#" icon="pi pi-angle-double-left" />
             <p:menuitem value="CONSOLES" url="#" icon="pi pi-angle-double-right" />
         </p:submenu> 
-
+        <p:submenu label="Login" icon="pi pi-question">
+            <p:menuitem value="Administrador" url="loginAdministrador.xhtml?faces-redirect=true" icon="pi pi-angle-double-left" />
+            <p:menuitem value="Vendedor" url="#" icon="pi pi-angle-double-right" />
+            <p:menuitem value="Cliente" url="#" icon="pi pi-angle-double-right" />
+        </p:submenu> 
+        
  
         <f:facet name="options">
             <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Procurar"/>
