Nova tela de lista de marca e arrumado o cadastro de marca

--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -46,7 +46,7 @@
 							url="listaCategoria.xhtml?faces-redirect=true" />
 						<p:separator />
 						<p:menuitem value="Marca"
-							url="cadastroMarca.xhtml?faces-redirect=true" />
+							url="listaMarca.xhtml?faces-redirect=true" />
 						<p:separator />
 						<p:menuitem value="Plataforma"
 							url="listaPlataforma.xhtml?faces-redirect=true" />
