--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -63,6 +63,12 @@
 						<p:separator />
 						<p:menuitem value="Cliente"
 							url="listaCliente.xhtml?faces-redirect=true" />
+						<p:separator />	
+						<p:menuitem value="Transportadora"
+							url="listaTransportadora.xhtml?faces-redirect=true" />
+						<p:separator />	
+						<p:menuitem value="Fornecedor"
+							url="listaFornecedor.xhtml?faces-redirect=true" />
 					</p:submenu>
 				</p:menubar>
 			</h:form>
