Adicionado algumas algumas informações a tela do carrinho

--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -12,13 +12,13 @@
 	<h:outputStylesheet name="primeicons/primeicons.css"
 		library="primefaces" />
 </h:head>
-
 <body>
 	<ui:composition>
-		<div id="hea	der" style="padding: 200px, 10px">
+		<div id="header" style="padding: 200px, 10px">
 			<h:form>
 				<p:growl id="messages" />
-				<p:panelGrid columns="3" layout="grid" styleClass="showcase-text-align-center">
+				<p:panelGrid columns="3" layout="grid"
+					styleClass="showcase-text-align-center">
 					<p:column>
 						<p:graphicImage style="width: 50px;height:50px;" library="imagem"
 							name="logoN.png" />
@@ -26,6 +26,9 @@
 					<p:column>
 						<p:inputText style="margin:1px 10px 1px 1px;"
 							placeholder="digite o nome do produto" />
+						<p:autoComplete id="acDelay" queryDelay="300"
+							value="#{produtoBean.produto}"
+							completeMethod="#{produtoBean.complete12()}" effect="blind" />
 						<p:commandButton style="float:center" type="button"
 							value="Pesquisar" icon="pi pi-search" />
 					</p:column>
@@ -63,10 +66,10 @@
 						<p:separator />
 						<p:menuitem value="Cliente"
 							url="listaCliente.xhtml?faces-redirect=true" />
-						<p:separator />	
+						<p:separator />
 						<p:menuitem value="Transportadora"
 							url="listaTransportadora.xhtml?faces-redirect=true" />
-						<p:separator />	
+						<p:separator />
 						<p:menuitem value="Fornecedor"
 							url="listaFornecedor.xhtml?faces-redirect=true" />
 					</p:submenu>
