--- a/src/main/webapp/resources/css/face.css
+++ b/src/main/webapp/resources/css/face.css
@@ -4,28 +4,70 @@
 	padding: 200px, 10px !important
 }
 
+.box, .sample-layout>div {
+	background-color: #cce4f7;
+	text-align: center;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	border-radius: 4px;
+}
+
+.box-stretched {
+	height: 100%;
+}
+
+.sample-layout {
+	margin: 0;
+}
+
+.sample-layout>div {
+	border: 1px solid #ffffff;
+}
+
+.vertical-container {
+	margin: 0;
+	height: 200px;
+	background: #efefef;
+	border-radius: 4px;
+}
+
+.nested-grid .p-col-4 {
+	padding-bottom: 1em;
+}
+
 html, body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	background: white;
 }
-.fonteLogin{
+.textoProduto{
+	font-size: 1.2em;
+	text-align: left;
+}
+
+
+.dimensao {
+	width: 200px;
+	height: 200px;
+	padding: 20px;
+	float: left;
+}
+
+.fonteLogin {
 	text-align: center;
 	color: black
 }
 
-.loginCorpo{
+.loginCorpo {
 	width: 625px;
 	height: 400px;
 	text-align: center;
 }
 
-.menu{
+.menu {
 	position: fixed;
-	
 }
-
 
 .login {
 	width: 600px;
@@ -48,6 +90,7 @@ h2 {
 	margin-left: auto;
 	margin-right: auto
 }
+
 .ui-dataview-list .ui-dataview-row {
 	border-bottom: 1px solid #A8A8A8;
 	padding: 25px 10px;
