Criado o UseClienteBean e arrumado o login de cliente
Duas alterações para o cliente

--- a/src/main/webapp/resources/css/footer.css
+++ b/src/main/webapp/resources/css/footer.css
@@ -7,7 +7,7 @@
     background: gray;
     font-size: 20px;
     border-top: 0.3rem solid black;
-   
+    width: 100%; 
   }
   .blog-footer p:last-child {
     margin-bottom: 500;
