--- a/src/main/webapp/resources/css/face.css
+++ b/src/main/webapp/resources/css/face.css
@@ -46,7 +46,6 @@ html, body {
 	text-align: left;
 }
 
-
 .dimensao {
 	width: 200px;
 	height: 200px;
@@ -55,14 +54,20 @@ html, body {
 }
 
 .fonteLogin {
-	text-align: center;
-	color: black
+	padding: 20px;
+	font-size: 1.6em;
+	
+}
+.inputLogin{
+	size: 1000px;
 }
 
+
 .loginCorpo {
-	width: 625px;
-	height: 400px;
+	width: 100%;
+	height: 450px;
 	text-align: center;
+	
 }
 
 .menu {
