--- a/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
+++ b/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
@@ -48,11 +48,17 @@
             </p:submenu>
         </p:submenu> 
         <p:menuitem value="Quit" url="http://www.primefaces.org" icon="pi pi-times" />
+
+     	<f:facet name="options">
+        	<p:commandButton type="button" value="Vendas" icon="pi pi-tag"
+        					 action="vendasVendedor.xhtml?faces-redirect=true"/>
+        </f:facet>
  
         <f:facet name="options">
             <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Search"/>
             <p:commandButton type="button" value="Logout" icon="pi pi-home" />
         </f:facet>
+      
     </p:menubar>
 			</h:form>
 		</div>
