Arrumando a tela de login
Falta acertar os botôes

--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title><ui:insert name="tituloJanela" /></title>
-	<h:outputStylesheet library="css" name="face.css" />
+	<h:outputStylesheet library="resources/css" name="face.css" />
 	<h:outputStylesheet name="primeicons/primeicons.css"
 		library="primefaces" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
