--- a/src/main/webapp/WEB-INF/template/MenuSite.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuSite.xhtml
@@ -8,7 +8,8 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<h:outputStylesheet library="css" name="face.css" />
-	<h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
+	<h:outputStylesheet name="primeicons/primeicons.css"
+		library="primefaces" />
 	<title>Site de jogos</title>
 </h:head>
 <h:body>
@@ -16,42 +17,52 @@
 		<div id="header" style="padding: 200px, 10px">
 			<h2 align="center">Seus jogos aqui</h2>
 			<h:form>
-			<p:growl id="messages"/>
- 
-    <p:menubar>
-        <p:submenu label="PLAYSTATION" icon="pi pi-file">
-            <p:menuitem rendered="" value="Categoria" url="cadastroCategoria.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="PLAYSTATION 5" url="cadastroMarca.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="PLAYSTATION 4" url="cadastroPlataforma.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="PLAYSTATION 3" url="cadastroProduto.xhtml?faces-redirect=true" />
-            <p:separator />
-        </p:submenu>
- 
-        <p:submenu label="XBOX" icon="pi pi-pencil">
-            <p:menuitem value="XBOX SERIES X e S" url="#" icon="pi pi-angle-double-left" />
-            <p:menuitem value="XBOX ONE" url="#" icon="pi pi-angle-double-right" />
-            <p:menuitem value="XBOX 360" url="#" icon="pi pi-angle-double-right" />
-        </p:submenu>
- 
-        <p:submenu label="NINTENDO" icon="pi pi-question">
-            <p:menuitem value="JOGOS" url="#" icon="pi pi-angle-double-left" />
-            <p:menuitem value="CONSOLES" url="#" icon="pi pi-angle-double-right" />
-        </p:submenu> 
-        <p:submenu label="Login" icon="pi pi-question">
-            <p:menuitem value="Administrador" url="loginAdministrador.xhtml?faces-redirect=true" icon="pi pi-angle-double-left" />
-            <p:menuitem value="Vendedor" url="#" icon="pi pi-angle-double-right" />
-            <p:menuitem value="Cliente" url="#" icon="pi pi-angle-double-right" />
-        </p:submenu> 
-        
- 
-        <f:facet name="options">
-            <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Procurar"/>
-            <p:commandButton type="button" value="Login" icon="pi pi-home" />
-        </f:facet>
-    </p:menubar>
+				<p:growl id="messages" />
+
+				<p:menubar>
+					<p:submenu label="PLAYSTATION" icon="pi pi-file">
+						<p:menuitem rendered="" value="Categoria"
+							url="cadastroCategoria.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="PLAYSTATION 5"
+							url="cadastroMarca.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="PLAYSTATION 4"
+							url="cadastroPlataforma.xhtml?faces-redirect=true" />
+						<p:separator />
+						<p:menuitem value="PLAYSTATION 3"
+							url="cadastroProduto.xhtml?faces-redirect=true" />
+						<p:separator />
+					</p:submenu>
+
+					<p:submenu label="XBOX" icon="pi pi-pencil">
+						<p:menuitem value="XBOX SERIES X e S" url="#"
+							icon="pi pi-angle-double-left" />
+						<p:menuitem value="XBOX ONE" url="#"
+							icon="pi pi-angle-double-right" />
+						<p:menuitem value="XBOX 360" url="#"
+							icon="pi pi-angle-double-right" />
+					</p:submenu>
+
+					<p:submenu label="NINTENDO" icon="pi pi-question">
+						<p:menuitem value="JOGOS" url="#" icon="pi pi-angle-double-left" />
+						<p:menuitem value="CONSOLES" url="#"
+							icon="pi pi-angle-double-right" />
+					</p:submenu>
+					<p:submenu label="Login" icon="pi pi-question">
+						<p:menuitem value="Administrador"
+							url="loginAdministrador.xhtml?faces-redirect=true" />
+						<p:menuitem value="Vendedor" url="loginVendedor.xhtml?faces-redirect=true" />
+						<p:menuitem value="Cliente" url="clienteLogin.xhtml?faces-redirect=true" />
+					</p:submenu>
+
+
+					<f:facet name="options">
+						<p:inputText style="margin:1px 10px 1px 1px;"
+							placeholder="Procurar" />
+						<p:commandButton type="button" value="Login" icon="pi pi-home" />
+					</f:facet>
+				</p:menubar>
 			</h:form>
 		</div>
 	</ui:composition>
