--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -12,13 +12,28 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="shortcut icon" type="image/x-icon"
 		href="#{resource['imagem/logoN.png']}" />
+	<style>
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	background: white;
+}
+</style>
 </h:head>
 <h:body>
 	<div id="cabecalho">
 		<h:panelGroup rendered="#{UseAdmBean.logado == true}">
+			<ui:include src="/WEB-INF/template/MenuAdministrador.xhtml" />
+		</h:panelGroup>
+		<h:panelGroup rendered="#{UseClienteBean.logado == true}">
 			<ui:include src="/WEB-INF/template/MenuCliente.xhtml" />
 		</h:panelGroup>
-		<h:panelGroup rendered="#{UseAdmBean.logado == false}">
+		<h:panelGroup rendered="#{UseVendedorBean.logado == true}">
+			<ui:include src="/WEB-INF/template/MenuCliente.xhtml" />
+		</h:panelGroup>
+		<h:panelGroup
+			rendered="#{UseAdmBean.logado == false and UseClienteBean.logado == false and UseVendedorBean.logado == false}">
 			<ui:include src="/WEB-INF/template/MenuSite.xhtml" />
 		</h:panelGroup>
 	</div>
