--- a/src/main/webapp/WEB-INF/template/MenuSite.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuSite.xhtml
@@ -15,7 +15,6 @@
 <h:body>
 	<ui:composition>
 		<div id="header" style="padding: 200px, 10px">
-			<h2 align="center">Seus jogos aqui</h2>
 			<h:form>
 				<p:growl id="messages" />
 
@@ -60,7 +59,7 @@
 					<f:facet name="options">
 						<p:inputText style="margin:1px 10px 1px 1px;"
 							placeholder="Procurar" />
-						<p:commandButton type="button" value="Login" icon="pi pi-home" />
+						<p:commandButton type="button" icon="pi pi-search" />
 					</f:facet>
 				</p:menubar>
 			</h:form>
