Arrumando telas do cliente
Arrumado o carrinho
Arrumado alguns menus
Arrumado a index

--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -22,8 +22,10 @@
 						<p:graphicImage style="width: 50px;height:50px;" library="imagem"
 							name="logoN.png" />
 					</p:column>
-					<p:column >
-						<p:menuButton icon="pi pi-user" style="float:right;" value="#{UseAdmBean.administrador.nome}">
+					<p:column>
+						<p:menuButton icon="pi pi-user"
+							style="float:right;padding: 10px 5px;"
+							value="#{UseAdmBean.administrador.nome}">
 							<p:menuitem value="Sair" icon="pi pi-sign-out"
 								action="#{UseAdmBean.logout()}" />
 						</p:menuButton>
