--- a/src/main/webapp/WEB-INF/template/MenuCliente.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuCliente.xhtml
@@ -8,51 +8,76 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<h:outputStylesheet library="css" name="face.css" />
-	<h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
+	<h:outputStylesheet name="primeicons/primeicons.css"
+		library="primefaces" />
 	<title>Site de jogos</title>
 </h:head>
 <ui:composition>
-		<div id="header" style="padding: 200px, 10px">
-			<h:form>
-			<p:growl id="messages"/>
- 
-    <p:menubar>
-        <p:submenu label="PLAYSTATION" icon="pi pi-file">
-            <p:menuitem rendered="" value="Categoria" url="cadastroCategoria.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="PLAYSTATION 5" url="cadastroMarca.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="PLAYSTATION 4" url="cadastroPlataforma.xhtml?faces-redirect=true" />
-            <p:separator />
-             <p:menuitem value="PLAYSTATION 3" url="cadastroProduto.xhtml?faces-redirect=true" />
-            <p:separator />
-        </p:submenu>
- 
-        <p:submenu label="XBOX" icon="pi pi-pencil">
-            <p:menuitem value="XBOX SERIES X e S" url="#" icon="pi pi-angle-double-left" />
-            <p:menuitem value="XBOX ONE" url="#" icon="pi pi-angle-double-right" />
-            <p:menuitem value="XBOX 360" url="#" icon="pi pi-angle-double-right" />
-        </p:submenu>
- 
-        <p:submenu label="NINTENDO" icon="pi pi-question">
-            <p:menuitem value="JOGOS" url="#" icon="pi pi-angle-double-left" />
-            <p:menuitem value="CONSOLES" url="#" icon="pi pi-angle-double-right" />
-        </p:submenu> 
-        
-        <p:menuitem value="CARRINHO" icon="pi pi-shopping-cart" url="carrinhoCliente.xhtml?faces-redirect=true">       
-        <f:param name="i" value="2" /> 
-        </p:menuitem>
-        
-        <p:menuitem value="PEDIDOS" icon="pi pi-tag" url="comprasCliente.xhtml?faces-redirect=true">       
-        <f:param name="i" value="3" />
-   	    </p:menuitem>
+	<div id="header" style="padding: 200px, 10px">
+		<h:form>
+			<p:growl id="messages" />
+			<p:panelGrid columns="2" layout="grid">
+				<p:column>
+					<h:commandLink action="index.xhtml?faces-redirect=true">
+						<p:graphicImage style="width: 50px;height:50px;" library="imagem"
+							name="logoN.png" />
+					</h:commandLink>
+				</p:column>
+				<p:column>
+					<p:menuButton icon="pi pi-user"
+						style="float:right;padding: 10px 5px;"
+						value="#{UseClienteBean.cliente.nome}">
+						<p:menuitem value="Sair" icon="pi pi-sign-out"
+							action="#{UseClienteBean.logout()}" />
+					</p:menuButton>
+				</p:column>
+			</p:panelGrid>
+			<p:menubar>
+				<p:submenu label="PLAYSTATION">
+					<p:menuitem rendered="" value="Categoria"
+						url="cadastroCategoria.xhtml?faces-redirect=true" />
+					<p:separator />
+					<p:menuitem value="PLAYSTATION 5"
+						url="cadastroMarca.xhtml?faces-redirect=true" />
+					<p:separator />
+					<p:menuitem value="PLAYSTATION 4"
+						url="cadastroPlataforma.xhtml?faces-redirect=true" />
+					<p:separator />
+					<p:menuitem value="PLAYSTATION 3"
+						url="cadastroProduto.xhtml?faces-redirect=true" />
+					<p:separator />
+				</p:submenu>
 
-        <f:facet name="options">
-            <p:inputText style="margin:1px 10px 1px 1px;" placeholder="Procurar"/>
-            <p:commandButton type="button" icon="pi pi-search" />
-        </f:facet>
-    </p:menubar>
-			</h:form>
-		</div>
-	</ui:composition>
+				<p:submenu label="XBOX">
+					<p:menuitem value="XBOX SERIES X e S" url="#" />
+					<p:separator />
+					<p:menuitem value="XBOX ONE" url="#" />
+					<p:separator />
+					<p:menuitem value="XBOX 360" url="#" />
+				</p:submenu>
+
+				<p:submenu label="NINTENDO">
+					<p:menuitem value="JOGOS" url="#" />
+					<p:menuitem value="CONSOLES" url="#" />
+				</p:submenu>
+
+				<p:menuitem value="CARRINHO" icon="pi pi-shopping-cart"
+					url="carrinhoCliente.xhtml?faces-redirect=true">
+					<f:param name="i" value="2" />
+				</p:menuitem>
+
+				<p:menuitem value="PEDIDOS" icon="pi pi-tag"
+					url="comprasCliente.xhtml?faces-redirect=true">
+					<f:param name="i" value="3" />
+				</p:menuitem>
+
+				<f:facet name="options">
+					<p:inputText style="margin:1px 10px 1px 1px;"
+						placeholder="Procurar" />
+					<p:commandButton type="button" icon="pi pi-search" />
+				</f:facet>
+			</p:menubar>
+		</h:form>
+	</div>
+</ui:composition>
 </html>
