ADD(MenuSite.xhtml) pesquisa
Arrumado o input text e o commandButton para ser possível fazer a pesquisa

--- a/src/main/webapp/WEB-INF/template/MenuSite.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuSite.xhtml
@@ -58,8 +58,8 @@
 
 					<f:facet name="options">
 						<p:inputText style="margin:1px 10px 1px 1px;"
-							placeholder="Procurar" />
-						<p:commandButton type="button" icon="pi pi-search" />
+							value="produtoBean.filtro" placeholder="Procurar" />
+						<p:commandButton type="button" action="produtoBean.buscar()" icon="pi pi-search" />
 					</f:facet>
 				</p:menubar>
 			</h:form>
