UPDATE(template) view
Foi colocado a tag view para ser possível colocar paremetros entre as telas

--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -4,6 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
+<f:view>	
 <h:head>
 	<title><ui:insert name="tituloJanela" /></title>
 	<h:outputStylesheet library="resources/css" name="face.css" />
@@ -45,4 +46,5 @@ html, body {
 		<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
 	</div>
 </h:body>
+</f:view>
 </html>
