--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -20,7 +20,7 @@
 				<p:panelGrid columns="2" layout="grid">
 					<p:column>
 						<p:graphicImage style="width: 50px;height:50px;" library="imagem"
-							name="logoN.png" />
+							name="logoB.png" />
 					</p:column>
 					<p:column>
 						<p:menuButton icon="pi pi-user"
