--- a/src/main/webapp/WEB-INF/template/MenuCliente.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuCliente.xhtml
@@ -19,23 +19,25 @@
 			<p:panelGrid columns="3" layout="grid">
 				<p:column>
 					<h:commandLink action="index.xhtml?faces-redirect=true">
-						<p:graphicImage style="width: 50px;height:50px;" library="imagem"
-							name="logoN.png" />
+						<p:graphicImage style="width: 75px;height:75px;" library="imagem"
+							name="logoB.png" />
 					</h:commandLink>
 				</p:column>
 				<p:column>
-					<p:inputText style="margin:1px 10px 1px 1px;"
-						value="#{produtoBean.filtro}" placeholder="Procurar" />
-					<p:commandButton action="#{produtoBean.telaPesquisa()}"
-						icon="pi pi-search">
-						<f:ajax execute="@this" render="@all" />
-					</p:commandButton>
+					<div style="padding-top: 20px">
+						<p:inputText size="35" style="margin:1px 10px 1px 1px;"
+							value="#{produtoBean.filtro}" placeholder="Procurar" />
+						<p:commandButton action="#{produtoBean.telaPesquisa()}"
+							icon="pi pi-search">
+							<f:ajax execute="@this" render="@all" />
+						</p:commandButton>
+					</div>
 				</p:column>
 				<p:column>
 					<p:menuButton icon="pi pi-user"
-						style="float:right;padding: 10px 5px;"
+						style="float:right;padding: 20px 10px;"
 						value="#{UseClienteBean.cliente.nome}">
-						<p:menuitem value="Sair" icon="pi pi-sign-out"
+						<p:menuitem value="Finalizar sessão" icon="pi pi-sign-out"
 							action="#{UseClienteBean.logout()}" />
 					</p:menuButton>
 				</p:column>
