--- a/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
+++ b/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
@@ -49,15 +49,9 @@
 						<p:menuitem value="Produto" action="#{produtoBean.crud()}" />
 						<p:separator />
 					</p:submenu>
-					<p:submenu label="Administração" icon="pi pi-users">
-						<p:menuitem value="Administrador"
-							url="listaAdministrador.xhtml?faces-redirect=true" />
-						<p:separator />
-						<p:menuitem value="Vendedor"
-							url="listaVendedor.xhtml?faces-redirect=true" />
-						<p:separator />
-						<p:menuitem value="Cliente"
-							url="listaCliente.xhtml?faces-redirect=true" />
+					<p:submenu label="Venda" icon="pi pi-users">
+						<p:menuitem value="Venda"
+							url="vendaVendedor.xhtml?faces-redirect=true" />
 						<p:separator />
 					</p:submenu>
 					<p:submenu label="Parceiros" icon="pi pi-briefcase">
