--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -12,7 +12,7 @@
 		library="primefaces" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="shortcut icon" type="image/x-icon"
-		href="#{resource['imagem/logoB.png']}" />
+		href="#{resource['imagem/logoI.png']}" />
 	<style>
 html, body {
 	margin: 0;
