--- a/src/main/webapp/WEB-INF/template/MenuSite.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuSite.xhtml
@@ -17,6 +17,27 @@
 		<div id="header" style="padding: 200px, 10px">
 			<h:form>
 				<p:growl id="messages" />
+				<p:panelGrid columns="3" layout="grid">
+					<p:column>
+						<h:commandLink action="index.xhtml?faces-redirect=true">
+							<p:graphicImage style="width: 75px;height:75px;" library="imagem"
+								name="logoB.png" />
+						</h:commandLink>
+					</p:column>
+					<p:column>
+						<div style="padding-top: 20px">
+							<p:inputText size="35" style="margin:1px 10px 1px 1px;"
+								value="#{produtoBean.filtro}" placeholder="Procurar" />
+							<p:commandButton action="#{produtoBean.telaPesquisa()}"
+								icon="pi pi-search">
+								<f:ajax execute="@this" render="@all" />
+							</p:commandButton>
+						</div>
+					</p:column>
+					<p:column>
+						<p:commandLink style="float:right;padding: 20px 25px;"  value="Login" />
+					</p:column>
+				</p:panelGrid>
 				<p:menubar>
 					<p:submenu label="PLAYSTATION">
 						<p:menuitem rendered="" value="Categoria"
@@ -51,12 +72,6 @@
 						<p:menuitem value="Cliente"
 							url="clienteLogin.xhtml?faces-redirect=true" />
 					</p:submenu>
-					<f:facet name="options">
-						<p:inputText style="margin:1px 10px 1px 1px;"
-							value="#{produtoBean.filtro}" placeholder="Procurar" />
-						<p:commandButton action="#{produtoBean.telaPesquisa()}"
-							icon="pi pi-search" />
-					</f:facet>
 				</p:menubar>
 			</h:form>
 		</div>
